--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,15 @@
+Version 2.54.7
+==============
+
+- Fix compilation on rustc < 1.58.
+
+Version 2.54.6
+==============
+
+This is a security release for bug #996.
+
+- #996 - Fix arbitrary file read when href has special characters.
+
 Version 2.54.5
 ==============
 
